--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_1_2.jpg" alt="Cashless Payment" width="360"
                                 height="300">
@@ -78,7 +78,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_1_3.jpg" alt="Meditation app" width="360"
                                 height="300">
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_2_1.jpg" alt="Taxi Service" width="360"
                                 height="300">
@@ -100,7 +100,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_2_2.jpg" alt="Screen illustrationst" width="360"
                                 height="300">
@@ -111,7 +111,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_2_3.jpg" alt="Online courses" width="360"
                                 height="300">
@@ -122,7 +122,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_3_1.jpg" alt="Instagram stories concept"
                                 width="360" height="300">
@@ -133,7 +133,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_3_2.jpg" alt="Organic food" width="360"
                                 height="300">
@@ -144,7 +144,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link">
+                        <a href=" " class="item-project link hover-shad">
 
                             <img src="./images/Portfolio/ProjectCard_3_3.jpg" alt="Fresh coffee" width="360"
                                 height="300">
@@ -181,28 +181,28 @@
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-Inst"></use>
+                                    <use href="./images/icon.svg#icon-Inst"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
