--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <ul class="features-nt list">
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon">
-                                <use href="./images/icons.svg#icon-antenna-1"></use>
+                            <svg class="features-icon" width="64">
+                                <use href="./images/icon.svg#icon-antenna-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Strategy</h3>
@@ -73,8 +73,8 @@
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon">
-                                <use href="./images/icons.svg#icon-clock-1"></use>
+                            <svg class="features-icon" width="64">
+                                <use href="./images/icon.svg#icon-clock-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Punctuality</h3>
@@ -87,27 +87,24 @@
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon">
-                                <use href="./images/icons.svg#icon-diagram-1"></use>
+                            <svg class="features-icon" width="64">
+                                <use href="./images/icon.svg#icon-diagram-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Diligence</h3>
                         <p class="feature-text">Research and confirm brands that present the strongest digital growth
                             opportunities
-                            and minimize
-                            risk.</p>
+                            and minimize risk.</p>
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon">
-                                <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            <svg class="features-icon" width="64">
+                                <use href="./images/icon.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
                         <h3 class="feature-title">Technologies</h3>
                         <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
-                            passion
-                            for
-                            problem-solving.
+                            passion for problem-solving.
                         </p>
                     </li>
                 </ul>
@@ -144,29 +141,29 @@
                             <ul class="social-list list">
                                 <li>
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="24">
-                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                            <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                            <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -181,29 +178,29 @@
                             <ul class="social-list list">
                                 <li>
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="24">
-                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                            <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                            <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -218,29 +215,29 @@
                             <ul class="social-list list">
                                 <li>
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="24">
-                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                            <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                            <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -255,29 +252,29 @@
                             <ul class="social-list list">
                                 <li>
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="24">
-                                            <use href="./images/icons.svg#icon-Inst"></use>
+                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                            <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                            <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                            <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="social-item">
                                         <svg class="socisl-list-icon" widht="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                            <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -290,47 +287,47 @@
 
         <section class="customers section">
             <div class="container">
-                <h2 class="title">Customer</h2>
+                <h2 class="cust-title title">Customers</h2>
                 <ul class="customer-list list">
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
                             <svg class="icon-cust" widht="104" height="56">
-                                <use href="./images/icons.svg#icon-YaCo"></use>
+                                <use href="./images/icon.svg#icon-YaCo"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
                             <svg class="icon-cust" widht="104" height="56">
-                                <use href="./images/icons.svg#icon-Company"></use>
+                                <use href="./images/icon.svg#icon-Company"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
                             <svg class="icon-cust" widht="104" height="56">
-                                <use href="./images/icons.svg#icon-Company2"></use>
+                                <use href="./images/icon.svg#icon-Company2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
                             <svg class="icon-cust" widht="104" height="56">
-                                <use href="./images/icons.svg#icon-Foster"></use>
+                                <use href="./images/icon.svg#icon-Foster"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
                             <svg class="icon-cust" widht="104" height="56">
-                                <use href="./images/icons.svg#icon-Brand"></use>
+                                <use href="./images/icon.svg#icon-Brand"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
                             <svg class="icon-cust" widht="104" height="56">
-                                <use href="./images/icons.svg#icon-TagLine"></use>
+                                <use href="./images/icon.svg#icon-TagLine"></use>
                             </svg>
                         </a>
                     </li>
@@ -344,9 +341,10 @@
 
     </main>
     <!--Футер-->
-    <footer class="footer">
+    <footer>
+
         <div class="container">
-            <div class="footmain">
+            <div class="footer">
                 <div class="footinfo">
                     <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
                     <p class="footer-text">
@@ -355,38 +353,39 @@
                     </p>
                 </div>
                 <div class="footink">
-                    <h2 class="foot-title">Social media</h2>
+                    <p class="foot-title">Social media</p>
                     <ul class="social-list list">
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-Inst"></use>
+                                    <use href="./images/icon.svg#icon-Inst"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                    <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
                                 <svg class="socisl-list-icon" widht="24" height="24">
-                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                    <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </footer>
